<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/post"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_post_profile"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"/>

    <TextView
        android:id="@+id/reel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/reel"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic__reels"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"/>

    <TextView
        android:id="@+id/story"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/story"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_story"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"/>

    <TextView
        android:id="@+id/storyHighlight"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/storyHighlight"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic__reels"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"/>

    <TextView
        android:id="@+id/igtv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/igtv"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_igtv"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"/>

    <TextView
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/guide"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_guide"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"/>

</LinearLayout>