<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/menu_share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/menu_link"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic__link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/menu_report"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_error_outline_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginTop="5dp"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/hide"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/hide"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:gravity="start|center_vertical"/>

    <TextView
        android:id="@+id/unfollow"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/unfollow"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:gravity="start|center_vertical"/>

</LinearLayout>