<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:weightSum="4">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/requestIV"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="0.8"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/requestTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.1"
        android:text="@string/exRequest"
        android:layout_gravity="center_vertical"
        android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/lightBlue"
            android:textAllCaps="false"
            android:text="@string/confirm"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAllCaps="false"
            android:text="@string/delete"/>

</LinearLayout>