<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.requests.MessageRequestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/messageRequests"
                android:background="@color/white"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
                app:titleTextColor="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msgReqText"
        android:textColor="@color/grey"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

       <de.hdodenhof.circleimageview.CircleImageView
           android:layout_width="0dp"
           android:layout_height="65dp"
           android:layout_weight="1"
           android:src="@drawable/ic_hidden"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hiddenReq"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/noOfHiddenReq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="0"
            android:layout_gravity="center_vertical"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/moreBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text=">"
            android:textColor="@color/black"
            android:background="@drawable/button_background"
            app:backgroundTint="@color/white"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noMsgReq"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noMsgReqText"
        android:layout_marginVertical="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>